Source/WebKit2/UIProcess/qt/QtWebPageLoadClient.cpp
@@ -26,12 +26,17 @@
 #include "qquickwebview_p.h"
 #include "qquickwebview_p_p.h"
 #include "qwebloadrequest_p.h"
+#include <KURL.h>
 #include <WKFrame.h>
+#include <WebPageProxy.h>
+
+using namespace WebCore;
 
 namespace WebKit {
 
 QtWebPageLoadClient::QtWebPageLoadClient(WKPageRef pageRef, QQuickWebView* webView)
     : m_webView(webView)
+    , m_webPageProxy(toImpl(pageRef))
     , m_loadProgress(0)
 {
     WKPageLoaderClient loadClient;
@@ -54,37 +59,50 @@ QtWebPageLoadClient::QtWebPageLoadClient(WKPageRef pageRef, QQuickWebView* webVi
     WKPageSetPageLoaderClient(pageRef, &loadClient);
 }
 
-void QtWebPageLoadClient::didStartProvisionalLoadForFrame(const QUrl& url)
+void QtWebPageLoadClient::completeLoadWhenProcessDidCrashIfNeeded()
+{
+    // Check if loading was ongoing, when process crashed.
+    if (!m_loadProgress || m_loadProgress == 100)
+        return;
+
+    QUrl url(KURL(WebCore::ParsedURLString, m_webPageProxy->urlAtProcessExit()));
+    QWebLoadRequest loadRequest(url, QQuickWebView::LoadFailedStatus, QLatin1String("The web process crashed."), QQuickWebView::InternalErrorDomain, 0);
+
+    emit m_webView->loadingChanged(&loadRequest);
+    setLoadProgress(100);
+}
+
+void QtWebPageLoadClient::didStartProvisionalLoad(const QUrl& url)
 {
     QWebLoadRequest loadRequest(url, QQuickWebView::LoadStartedStatus);
     m_webView->emitUrlChangeIfNeeded();
-    m_webView->d_func()->didChangeLoadingState(&loadRequest);
+    emit m_webView->loadingChanged(&loadRequest);
 }
 
-void QtWebPageLoadClient::didReceiveServerRedirectForProvisionalLoadForFrame(const QUrl& url)
+void QtWebPageLoadClient::didReceiveServerRedirectForProvisionalLoad(const QUrl& url)
 {
     m_webView->emitUrlChangeIfNeeded();
 }
 
-void QtWebPageLoadClient::didCommitLoadForFrame()
+void QtWebPageLoadClient::didCommitLoad()
 {
     emit m_webView->navigationHistoryChanged();
     emit m_webView->titleChanged();
     m_webView->d_func()->loadDidCommit();
 }
 
-void QtWebPageLoadClient::didSameDocumentNavigationForFrame()
+void QtWebPageLoadClient::didSameDocumentNavigation()
 {
     m_webView->emitUrlChangeIfNeeded();
     emit m_webView->navigationHistoryChanged();
 }
 
-void QtWebPageLoadClient::didReceiveTitleForFrame()
+void QtWebPageLoadClient::didReceiveTitle()
 {
     emit m_webView->titleChanged();
 }
 
-void QtWebPageLoadClient::didFirstVisuallyNonEmptyLayoutForFrame()
+void QtWebPageLoadClient::didFirstVisuallyNonEmptyLayout()
 {
     m_webView->d_func()->didFinishFirstNonEmptyLayout();
 }
@@ -147,7 +165,7 @@ void QtWebPageLoadClient::didStartProvisionalLoadForFrame(WKPageRef, WKFrameRef 
     WebFrameProxy* wkframe = toImpl(frame);
     QString urlStr(wkframe->provisionalURL());
     QUrl qUrl = urlStr;
-    toQtWebPageLoadClient(clientInfo)->didStartProvisionalLoadForFrame(qUrl);
+    toQtWebPageLoadClient(clientInfo)->didStartProvisionalLoad(qUrl);
 }
 
 void QtWebPageLoadClient::didReceiveServerRedirectForProvisionalLoadForFrame(WKPageRef, WKFrameRef frame, WKTypeRef, const void* clientInfo)
@@ -157,7 +175,7 @@ void QtWebPageLoadClient::didReceiveServerRedirectForProvisionalLoadForFrame(WKP
     WebFrameProxy* wkframe = toImpl(frame);
     QString urlStr(wkframe->provisionalURL());
     QUrl qUrl = urlStr;
-    toQtWebPageLoadClient(clientInfo)->didReceiveServerRedirectForProvisionalLoadForFrame(qUrl);
+    toQtWebPageLoadClient(clientInfo)->didReceiveServerRedirectForProvisionalLoad(qUrl);
 }
 
 void QtWebPageLoadClient::didFailProvisionalLoadWithErrorForFrame(WKPageRef, WKFrameRef frame, WKErrorRef error, WKTypeRef, const void* clientInfo)
@@ -172,7 +190,7 @@ void QtWebPageLoadClient::didCommitLoadForFrame(WKPageRef, WKFrameRef frame, WKT
 {
     if (!WKFrameIsMainFrame(frame))
         return;
-    toQtWebPageLoadClient(clientInfo)->didCommitLoadForFrame();
+    toQtWebPageLoadClient(clientInfo)->didCommitLoad();
 }
 
 void QtWebPageLoadClient::didFinishLoadForFrame(WKPageRef, WKFrameRef frame, WKTypeRef, const void* clientInfo)
@@ -189,16 +207,18 @@ void QtWebPageLoadClient::didFailLoadWithErrorForFrame(WKPageRef, WKFrameRef fra
     toQtWebPageLoadClient(clientInfo)->dispatchLoadFailed(frame, error);
 }
 
-void QtWebPageLoadClient::didSameDocumentNavigationForFrame(WKPageRef page, WKFrameRef frame, WKSameDocumentNavigationType type, WKTypeRef userData, const void* clientInfo)
+void QtWebPageLoadClient::didSameDocumentNavigationForFrame(WKPageRef, WKFrameRef frame, WKSameDocumentNavigationType type, WKTypeRef userData, const void* clientInfo)
 {
-    toQtWebPageLoadClient(clientInfo)->didSameDocumentNavigationForFrame();
+    if (!WKFrameIsMainFrame(frame))
+        return;
+    toQtWebPageLoadClient(clientInfo)->didSameDocumentNavigation();
 }
 
 void QtWebPageLoadClient::didReceiveTitleForFrame(WKPageRef, WKStringRef title, WKFrameRef frame, WKTypeRef, const void* clientInfo)
 {
     if (!WKFrameIsMainFrame(frame))
         return;
-    toQtWebPageLoadClient(clientInfo)->didReceiveTitleForFrame();
+    toQtWebPageLoadClient(clientInfo)->didReceiveTitle();
 }
 
 void QtWebPageLoadClient::didStartProgress(WKPageRef, const void* clientInfo)
@@ -222,7 +242,7 @@ void QtWebPageLoadClient::didFirstVisuallyNonEmptyLayoutForFrame(WKPageRef, WKFr
 {
     if (!WKFrameIsMainFrame(frame))
         return;
-    toQtWebPageLoadClient(clientInfo)->didFirstVisuallyNonEmptyLayoutForFrame();
+    toQtWebPageLoadClient(clientInfo)->didFirstVisuallyNonEmptyLayout();
 }
 
 void QtWebPageLoadClient::didChangeBackForwardList(WKPageRef, WKBackForwardListItemRef, WKArrayRef, const void *clientInfo)
